# pressure-transducer

./: .gitignore  .gitmodules  README.md  notes.md  west.yml
.github/workflows/: build_and_release.yml  build_binaries.yml
code/DIY1/: DIY1.ino
code/DIY2/: DIY2.ino
code/DIY3/: DIY3.ino
code/DIY3-DIY4/: CMakeLists.txt  sdkconfig
code/DIY3-DIY4/main/: CMakeLists.txt  DIY4.cpp  index.html  index_html.h  main.cpp
code/DIY3-esp32/: DIY3-esp32.ino
code/DIY4/: DIY4.ino  index_html.h
code/OWHL/OWHL2.0/: OWHL2.0.ino
code/OWHL2.0/: OWHL2.0.ino
code/data-processing/: data_to_csv.py
code/pressure_transducer/: pressure_transducer.ino
code/processing/: data_to_csv.py  processing_tools.py  unpack_raw.py
code/rpi_time_set/: rpi_time_set.py
code/scripts/: calibration.py  compare_MS2_RBR.py  compile_ms2_to_excel.py  html_to_h.py  plot_DIY3.py  plot_data.py  process_data.py  processing_tools.py  raw_to_csv.py  read_DIY3.py  read_data.py  stats.py  zip_binaries.py
code/settime_Serial/: settime_Serial.ino
code/tools/: html_to_h.py
code/transducer-firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
code/transducer-firmware/components/arduino-libraries/: CMakeLists.txt
code/transducer-firmware/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.cpp
documentation/: materials.md  notes.md
documentation/parts-list/: 2025-04 PT Parts List.ods
hardware/DIY/: assembly_guide.pub
hardware/DIY2/: PressureTransducerDIY-cache.lib  PressureTransducerDIY.kicad_pcb  PressureTransducerDIY_Breakouts.lib  fp-lib-table  sym-lib-table
hardware/DIY3-esp/: DIY3-esp.kicad_pro  DIY3-esp.kicad_sch  esp32.kicad_sym
hardware/DIY3-stm/: DIY3-stm.kicad_pro  DIY3.kicad_sch
hardware/PCB/: PressureTransducerPCB.sch
zephyr/: module.yml
(+125 files in other folders)
